# wgpu-demo-1

./: Cargo.toml  TODO.md  build.rs
src/: components.rs  main.rs  resources.rs  shader.wgsl  texture.wgsl
src/components/: char.rs  cube.rs  pentagon.rs  text.rs
src/core/: mod.rs  model.rs  texture.rs
