[package]
name = "demo-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
glyphon = "0.3.0"
image = { version = "0.24.7", features = ["png", "jpeg"] }
pollster = "0.3.0"
wgpu = "0.16.3"
winit = "0.28.7"
