[package]
name = "demo-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.10.0"
glyphon = "0.3.0"
image = { version = "0.24.7", features = ["png", "jpeg"] }
pollster = "0.3.0"
tobj = { version = "4.0.0", features = ["async"] }
wgpu = "0.16.3"
winit = "0.28.7"

[build-dependencies]
anyhow = "1.0.75"
fs_extra = "1.3.0"
glob = "0.3.1"
